MODOAIPMH-571 - Tech Debt: enable check-style plugin (#419)