@@ -5,16 +5,20 @@ import static java.util.Objects.nonNull;
 import static org.apache.commons.lang3.StringUtils.isNotEmpty;
 import static org.folio.rest.jooq.Tables.SET_LB;
 
+import io.github.jklingsporn.vertx.jooq.classic.reactivepg.ReactiveClassicGenericQueryExecutor;
+import io.github.jklingsporn.vertx.jooq.shared.internal.QueryResult;
+import io.vertx.core.Future;
+import io.vertx.core.json.JsonArray;
+import io.vertx.core.json.JsonObject;
+import io.vertx.sqlclient.Row;
+import io.vertx.sqlclient.RowSet;
 import java.time.Instant;
 import java.time.ZoneOffset;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
-
 import javax.ws.rs.NotFoundException;
-
 import org.folio.oaipmh.dao.PostgresClientFactory;
 import org.folio.oaipmh.dao.SetDao;
 import org.folio.rest.jaxrs.model.FilteringCondition;
@@ -24,14 +28,6 @@ import org.folio.rest.jooq.tables.mappers.RowMappers;
 import org.folio.rest.jooq.tables.records.SetLbRecord;
 import org.jooq.Condition;
 import org.springframework.stereotype.Repository;
-
-import io.github.jklingsporn.vertx.jooq.classic.reactivepg.ReactiveClassicGenericQueryExecutor;
-import io.github.jklingsporn.vertx.jooq.shared.internal.QueryResult;
-import io.vertx.core.Future;
-import io.vertx.core.json.JsonArray;
-import io.vertx.core.json.JsonObject;
-import io.vertx.sqlclient.Row;
-import io.vertx.sqlclient.RowSet;
 
 @Repository
 public class SetDaoImpl implements SetDao {
@@ -50,15 +46,15 @@ public class SetDaoImpl implements SetDao {
     return getQueryExecutorReader(tenantId).transaction(txQE -> {
       Condition condition = SET_LB.ID.eq(UUID.fromString(id));
       return txQE.findOneRow(dslContext -> dslContext.selectFrom(SET_LB)
-        .where(condition)
-        .limit(1))
-        .map(this::toOptionalSet)
-        .map(optionalSet -> {
-          if (optionalSet.isPresent()) {
-            return optionalSet.get();
-          }
-          throw new NotFoundException(String.format(NOT_FOUND_ERROR_MSG, id));
-        });
+          .where(condition)
+          .limit(1))
+          .map(this::toOptionalSet)
+          .map(optionalSet -> {
+            if (optionalSet.isPresent()) {
+              return optionalSet.get();
+            }
+            throw new NotFoundException(String.format(NOT_FOUND_ERROR_MSG, id));
+          });
     });
   }
 
@@ -67,74 +63,84 @@ public class SetDaoImpl implements SetDao {
     entry.setId(id);
     prepareSetMetadata(entry, userId, InsertType.UPDATE);
     SetLbRecord dbRecord = toDatabaseSetRecord(entry);
-    return getQueryExecutor(tenantId).transaction(queryExecutor -> queryExecutor.executeAny(dslContext -> dslContext.update(SET_LB)
-      .set(dbRecord)
-      .where(SET_LB.ID.eq(UUID.fromString(entry.getId())))
-      .returning())
-      .map(this::toOptionalSet)
-      .map(optionalSet -> {
-        if (optionalSet.isPresent()) {
-          return optionalSet.get();
-        }
-        throw new NotFoundException(String.format(NOT_FOUND_ERROR_MSG, entry.getId()));
-      }));
+    return getQueryExecutor(tenantId).transaction(queryExecutor ->
+        queryExecutor.executeAny(dslContext -> dslContext.update(SET_LB)
+            .set(dbRecord)
+            .where(SET_LB.ID.eq(UUID.fromString(entry.getId())))
+            .returning())
+            .map(this::toOptionalSet)
+            .map(optionalSet -> {
+              if (optionalSet.isPresent()) {
+                return optionalSet.get();
+              }
+              throw new NotFoundException(String.format(NOT_FOUND_ERROR_MSG, entry.getId()));
+            }));
   }
 
   @Override
   public Future<FolioSet> saveSet(FolioSet entry, String tenantId, String userId) {
     if (isNotEmpty(entry.getId())) {
-      return getQueryExecutor(tenantId).transaction(queryExecutor -> queryExecutor
-        .execute(dslContext -> dslContext.selectFrom(SET_LB)
-          .where(SET_LB.ID.eq(UUID.fromString(entry.getId()))))
-        .compose(res -> {
-          if (res == 1) {
-            throw new IllegalArgumentException(String.format(ALREADY_EXISTS_ERROR_MSG, entry.getId()));
-          }
-          return saveSetItem(entry, tenantId, userId);
-        }));
+      return getQueryExecutor(tenantId).transaction(queryExecutor ->
+          queryExecutor
+              .execute(dslContext -> dslContext.selectFrom(SET_LB)
+                  .where(SET_LB.ID.eq(UUID.fromString(entry.getId()))))
+              .compose(res -> {
+                if (res == 1) {
+                  throw new IllegalArgumentException(String.format(ALREADY_EXISTS_ERROR_MSG,
+                      entry.getId()));
+                }
+                return saveSetItem(entry, tenantId, userId);
+              }));
     } else {
-      entry.setId(UUID.randomUUID()
-        .toString());
+      entry.setId(UUID.randomUUID().toString());
       return saveSetItem(entry, tenantId, userId);
     }
   }
 
   private Future<FolioSet> saveSetItem(FolioSet entry, String tenantId, String userId) {
     prepareSetMetadata(entry, userId, InsertType.INSERT);
-    return getQueryExecutor(tenantId).transaction(queryExecutor -> queryExecutor.executeAny(dslContext -> dslContext.insertInto(SET_LB)
-      .set(toDatabaseSetRecord(entry)))
-      .map(raw -> entry));
+    return getQueryExecutor(tenantId).transaction(queryExecutor ->
+        queryExecutor.executeAny(dslContext -> dslContext.insertInto(SET_LB)
+          .set(toDatabaseSetRecord(entry)))
+          .map(raw -> entry));
   }
 
   @Override
   public Future<Boolean> deleteSetById(String id, String tenantId) {
-    return getQueryExecutor(tenantId).transaction(queryExecutor -> queryExecutor.execute(dslContext -> dslContext.deleteFrom(SET_LB)
-      .where(SET_LB.ID.eq(UUID.fromString(id))))
-      .map(res -> {
-        if (res == 1) {
-          return true;
-        }
-        throw new NotFoundException(String.format(NOT_FOUND_ERROR_MSG, id));
-      }));
+    return getQueryExecutor(tenantId).transaction(queryExecutor ->
+        queryExecutor.execute(dslContext -> dslContext.deleteFrom(SET_LB)
+            .where(SET_LB.ID.eq(UUID.fromString(id))))
+            .map(res -> {
+              if (res == 1) {
+                return true;
+              }
+              throw new NotFoundException(String.format(NOT_FOUND_ERROR_MSG, id));
+            }));
   }
 
   @Override
   public Future<FolioSetCollection> getSetList(int offset, int limit, String tenantId) {
-    return getQueryExecutorReader(tenantId).transaction(queryExecutor -> queryExecutor.query(dslContext -> dslContext.selectCount().from(SET_LB))).compose(recordsCount ->
-      getQueryExecutorReader(tenantId).transaction(queryExecutor -> queryExecutor.query(dslContext -> dslContext.selectFrom(SET_LB)
-        .orderBy(SET_LB.UPDATED_DATE.desc())
-        .offset(offset)
-        .limit(limit))
-        .map(collection -> queryResultToSetCollection(collection, recordsCount.get(0, int.class))))
+    return getQueryExecutorReader(tenantId)
+        .transaction(queryExecutor ->
+            queryExecutor.query(dslContext ->
+                dslContext.selectCount().from(SET_LB)))
+        .compose(recordsCount ->
+            getQueryExecutorReader(tenantId).transaction(queryExecutor ->
+                queryExecutor.query(dslContext -> dslContext.selectFrom(SET_LB)
+                    .orderBy(SET_LB.UPDATED_DATE.desc())
+                    .offset(offset)
+                    .limit(limit))
+                .map(collection -> queryResultToSetCollection(collection,
+                    recordsCount.get(0, int.class))))
     );
   }
 
-  private FolioSetCollection queryResultToSetCollection(QueryResult queryResult, int totalRecordsCount) {
+  private FolioSetCollection queryResultToSetCollection(QueryResult queryResult,
+      int totalRecordsCount) {
     List<FolioSet> list = queryResult.stream()
-      .map(row -> rowToSet(row.unwrap()))
-      .collect(Collectors.toList());
-    return new FolioSetCollection().withSets(list)
-      .withTotalRecords(totalRecordsCount);
+        .map(row -> rowToSet(row.unwrap()))
+        .toList();
+    return new FolioSetCollection().withSets(list).withTotalRecords(totalRecordsCount);
   }
 
   private void prepareSetMetadata(FolioSet entry, String userId, InsertType insertType) {
@@ -155,27 +161,27 @@ public class SetDaoImpl implements SetDao {
     if (isNotEmpty(set.getName())) {
       dbRecord.setName(set.getName());
     }
-    if(nonNull(set.getDescription())) {
+    if (nonNull(set.getDescription())) {
       dbRecord.setDescription(set.getDescription());
     }
     if (isNotEmpty(set.getSetSpec())) {
       dbRecord.setSetSpec(set.getSetSpec());
     }
-    if(nonNull(set.getFilteringConditions())) {
+    if (nonNull(set.getFilteringConditions())) {
       dbRecord.setFilteringConditions(fkListToJsonString(set.getFilteringConditions()));
     }
     if (Objects.nonNull(set.getCreatedDate())) {
       dbRecord.setCreatedDate(set.getCreatedDate()
-        .toInstant()
-        .atOffset(ZoneOffset.UTC));
+          .toInstant()
+          .atOffset(ZoneOffset.UTC));
     }
     if (isNotEmpty(set.getCreatedByUserId())) {
       dbRecord.setCreatedByUserId(UUID.fromString(set.getCreatedByUserId()));
     }
     if (Objects.nonNull(set.getUpdatedDate())) {
       dbRecord.setUpdatedDate(set.getUpdatedDate()
-        .toInstant()
-        .atOffset(ZoneOffset.UTC));
+          .toInstant()
+          .atOffset(ZoneOffset.UTC));
     }
     if (isNotEmpty(set.getUpdatedByUserId())) {
       dbRecord.setUpdatedByUserId(UUID.fromString(set.getUpdatedByUserId()));
@@ -201,12 +207,10 @@ public class SetDaoImpl implements SetDao {
   }
 
   private FolioSet rowToSet(Row row) {
-    org.folio.rest.jooq.tables.pojos.SetLb pojo = RowMappers.getSetLbMapper()
-      .apply(row);
+    org.folio.rest.jooq.tables.pojos.SetLb pojo = RowMappers.getSetLbMapper().apply(row);
     FolioSet set = new FolioSet();
     if (nonNull(pojo.getId())) {
-      set.withId(pojo.getId()
-        .toString());
+      set.withId(pojo.getId().toString());
     }
     if (nonNull(pojo.getName())) {
       set.withName(pojo.getName());
@@ -218,23 +222,19 @@ public class SetDaoImpl implements SetDao {
       set.withSetSpec(pojo.getSetSpec());
     }
     if (nonNull(pojo.getFilteringConditions())) {
-      set.setFilteringConditions(jsonStringToFKList(pojo.getFilteringConditions()));
+      set.setFilteringConditions(jsonStringToFkList(pojo.getFilteringConditions()));
     }
     if (nonNull(pojo.getCreatedByUserId())) {
-      set.withCreatedByUserId(pojo.getCreatedByUserId()
-        .toString());
+      set.withCreatedByUserId(pojo.getCreatedByUserId().toString());
     }
     if (nonNull(pojo.getCreatedDate())) {
-      set.withCreatedDate(from(pojo.getCreatedDate()
-        .toInstant()));
+      set.withCreatedDate(from(pojo.getCreatedDate().toInstant()));
     }
     if (nonNull(pojo.getUpdatedByUserId())) {
-      set.withUpdatedByUserId(pojo.getUpdatedByUserId()
-        .toString());
+      set.withUpdatedByUserId(pojo.getUpdatedByUserId().toString());
     }
     if (nonNull(pojo.getUpdatedDate())) {
-      set.withUpdatedDate(from(pojo.getUpdatedDate()
-        .toInstant()));
+      set.withUpdatedDate(from(pojo.getUpdatedDate().toInstant()));
     }
     return set;
   }
@@ -246,8 +246,8 @@ public class SetDaoImpl implements SetDao {
   private String fkListToJsonString(List<FilteringCondition> filteringConditions) {
     JsonArray jsonArray = new JsonArray();
     filteringConditions.stream()
-      .map(this::fkToJsonObject)
-      .forEach(jsonArray::add);
+        .map(this::fkToJsonObject)
+        .forEach(jsonArray::add);
     return jsonArray.toString();
   }
 
@@ -259,16 +259,16 @@ public class SetDaoImpl implements SetDao {
     return jsonObject;
   }
 
-  private List<FilteringCondition> jsonStringToFKList(String json) {
+  private List<FilteringCondition> jsonStringToFkList(String json) {
     return new JsonArray(json).stream()
       .map(JsonObject.class::cast)
       .map(this::jsonObjectToFilteringCondition)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private FilteringCondition jsonObjectToFilteringCondition(JsonObject jsonObject) {
     return new FilteringCondition().withName(jsonObject.getString("name"))
-      .withValue(jsonObject.getString("value"))
-      .withSetSpec(jsonObject.getString("setSpec"));
+        .withValue(jsonObject.getString("value"))
+        .withSetSpec(jsonObject.getString("setSpec"));
   }
 }
